--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,4 @@ include ':app'
 include ':playerFeature'
 include ':playlistFeature'
 include ':coreUI'
-include ':trackDiialogFeature'
+include ':trackdialogFeature'
