--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -27,6 +27,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                "-Xjvm-default=all",
+        ]
     }
     buildFeatures {
         viewBinding = true
@@ -37,16 +40,26 @@ android {
 }
 
 dependencies {
+    def coreKtx="1.3.2"
+    def fragmentKtx = "1.2.5"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+
+
+    implementation "androidx.core:core-ktx:$coreKtx"
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation project(path: ':coreUI')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    //viewModel
+    implementation "androidx.fragment:fragment-ktx:$fragmentKtx"
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     //Dagger/////////////////////
     implementation 'com.google.dagger:dagger:2.42'
     kapt 'com.google.dagger:dagger-compiler:2.42'
+
+
 }
