--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -40,9 +40,10 @@ android {
 }
 
 dependencies {
-    def coreKtx="1.3.2"
+    def coreKtx="1.7.0"
     def fragmentKtx = "1.2.5"
-
+    def jUnitVersion="1.1.4"
+    def lifecycle_version = "2.2.0"
 
 
     implementation "androidx.core:core-ktx:$coreKtx"
@@ -50,11 +51,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation project(path: ':coreUI')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test.ext:junit:$jUnitVersion"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //viewModel
     implementation "androidx.fragment:fragment-ktx:$fragmentKtx"
-    def lifecycle_version = "2.2.0"
+
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     //Dagger/////////////////////
