--- a/playlistFeature/build.gradle
+++ b/playlistFeature/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation project(path: ':coreUI')
     implementation project(path: ':trackdialogFeature')
+    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
