--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,14 @@ dependencies {
     implementation project(path: ':coreUI')
     implementation project(path: ':playerFeature')
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    //core
+    implementation "androidx.core:core-ktx:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.6.0'
+
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -64,11 +66,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    //lifecycle-viewmodel////////////////////
-    def lifecycle_version = "2.5.1"
-    def lifecycle_extension = "2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extension"
+    // JetPack
+    implementation libs.viewmodelKtx
+    implementation libs.fragmentKtx
     //Dagger/////////////////////
     def dagger_version = "2.42"
     implementation "com.google.dagger:dagger:$dagger_version"
