--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,19 +56,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
-
+    //Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Navigation/////////////////
-    def nav_version = "2.5.3"
+   /* def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"*/
 
     // JetPack
-    implementation libs.viewmodelKtx
-    implementation libs.fragmentKtx
+    implementation libs.viewmodel.Ktx
+    implementation libs.fragment.Ktx
     //Dagger/////////////////////
     def dagger_version = "2.42"
     implementation "com.google.dagger:dagger:$dagger_version"
