--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,11 @@ dependencies {
     implementation project(path: ':playerFeature')
 
     //core
-    implementation "androidx.core:core-ktx:1.1.0"
+    implementation libs.androidx.core.ktx
     implementation 'androidx.appcompat:appcompat:1.6.0'
 
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
     //Test
@@ -62,13 +62,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //Navigation/////////////////
-   /* def nav_version = "2.5.3"
+    def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"*/
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // JetPack
-    implementation libs.viewmodel.Ktx
-    implementation libs.fragment.Ktx
+    implementation libs.viewmodel.ktx
+    implementation libs.fragment.ktx
     //Dagger/////////////////////
     def dagger_version = "2.42"
     implementation "com.google.dagger:dagger:$dagger_version"
