--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.1'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 //apply from: 'versions.gradle'
 
 
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-
-   // id 'org.jetbrains.kotlin.jvm' version '1.7.21' apply false
+    alias(libs.plugins.kotlin.android).apply(false)
+    alias(libs.plugins.kotlin.jvm).apply(false)
+    alias(libs.plugins.android.application).apply(false)
+    alias(libs.plugins.kotlin.kapt) apply false
 }
 
-/*
-ext {
-    // Sdk and tools
-    coreKtx = '1.1.0'
-
-}*/
 
 task clean(type: Delete) {
     delete rootProject.buildDir
