--- a/coreUI/build.gradle
+++ b/coreUI/build.gradle
@@ -36,9 +36,12 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.8.0'
+   // implementation 'androidx.core:core-ktx:1.9.0'
+    //implementation 'androidx.appcompat:appcompat:1.6.0'
 /*
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'*/
+
+
+    */
 
 }
