--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,21 @@
 [versions]
-core-ktx = "1.7.0"
-fragment-Ktx = "1.5.5"
-viewmodel-Ktx= "2.6.0-alpha03"
+androidx-core = "1.9.0"
+fragment-ktx="1.5.5"
+viewmodel-ktx="2.5.1"
+
+kotlin = "1.7.20"
+android-gradle-plugin = "7.3.1"
 
 [libraries]
-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
-fragment-Ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment-Ktx" }
-viewmodel-Ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "viewmodel-Ktx" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
+fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment-ktx" }
+viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "viewmodel-ktx" }
+test-kotlin-junit = {module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin"}
 
+[plugins]
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 
 
