--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -47,24 +47,30 @@ dependencies {
     def fragmentKtx = "1.5.5"
     def lifecycle_version = "2.4.0"
 
-
-
-
-    implementation libs.core.ktx
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation libs.androidx.core.ktx
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
 
-
-
     //viewModel
-    implementation "androidx.fragment:fragment-ktx:$fragmentKtx"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation libs.fragment.ktx
+    implementation libs.viewmodel.ktx
 
     //Dagger/////////////////////
     def dagger_version = "2.42"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
+
+    //test
+    def junitVersion="4.13.2"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation libs.test.kotlin.junit
+    // Mock objects
+    def mockkVersion="1.13.4"
+    testImplementation "io.mockk:mockk:$mockkVersion"
+    // Run Blocking Test
+    def coreTestingVersion="1.1.1"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 
 
 }
