--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
         viewBinding = true
     }
     dynamicFeatures = []
+    namespace 'com.yes.musicplayer'
 }
 
 dependencies {
@@ -50,7 +51,7 @@ dependencies {
 
     //core
     implementation libs.androidx.core.ktx
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'com.google.android.material:material:1.8.0'
     // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -70,8 +71,8 @@ dependencies {
     implementation libs.viewmodel.ktx
     implementation libs.fragment.ktx
     //Dagger/////////////////////
-    def dagger_version = "2.42"
+    def dagger_version = '2.45'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0" //ImportantSHIT!!!
+    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
 }
