--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//apply from: 'versions.gradle'
 buildscript {
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-//apply from: 'versions.gradle'
-
+}
 
 plugins {
+   /* id 'com.android.application' version '7.1.3' apply false
+    id 'com.android.library' version '7.1.3' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false*/
     alias(libs.plugins.kotlin.android).apply(false)
     alias(libs.plugins.kotlin.jvm).apply(false)
     alias(libs.plugins.android.application).apply(false)
-    alias(libs.plugins.kotlin.kapt) apply false
+   // alias(libs.plugins.kotlin.kapt) apply false
 }
 
-/*
+
 task clean(type: Delete) {
     delete rootProject.buildDir
-}*/
+}
