--- a/coreUI/build.gradle
+++ b/coreUI/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 19
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -33,11 +33,12 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'com.yes.coreui'
 }
 
 dependencies {
     implementation 'com.google.android.material:material:1.8.0'
-   // implementation 'androidx.core:core-ktx:1.9.0'
+     implementation 'androidx.core:core-ktx:1.9.0'
     //implementation 'androidx.appcompat:appcompat:1.6.0'
 /*
 
