--- a/playerFeature/build.gradle
+++ b/playerFeature/build.gradle
@@ -27,13 +27,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.yes.player'
 }
 
 dependencies {
     implementation project(path: ':coreUI')
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
 
     implementation 'androidx.core:core-ktx:1.9.0'
