--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -7,6 +7,11 @@ plugins {
 
 android {
     compileSdk 33
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 
     defaultConfig {
         minSdk 19
@@ -23,11 +28,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
         freeCompilerArgs += [
                 "-Xjvm-default=all",
         ]
@@ -35,35 +40,46 @@ android {
     buildFeatures {
         viewBinding = true
     }
-   /* dataBinding {
-        enabled = true
-    }*/
+    namespace 'com.yes.trackdialogfeature'
+     dataBinding {
+         enabled = true
+     }
 }
 
 dependencies {
     implementation project(path: ':coreUI')
     implementation project(path: ':core')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+
 
     def fragmentKtx = "1.5.5"
     def lifecycle_version = "2.4.0"
 
-    implementation libs.androidx.core.ktx
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    def material_version = "1.1.1"
+    def appcompat_version = "1.6.1"
+
+    def core_ktx_version = "1.1.1"
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "com.google.android.material:material:1.8.0"
 
     //viewModel
     implementation libs.fragment.ktx
     implementation libs.viewmodel.ktx
 
     //Dagger/////////////////////
-    def dagger_version = "2.42"
-    implementation "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
+    def dagger_version = '2.45'
+  /*  implementation "com.google.dagger:dagger:$dagger_version"
+    kapt 'com.google.dagger:dagger-compiler:2.45'
+    kapt 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0'*/
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
 
     //test
-    def junitVersion="4.13.2"
-    testImplementation "junit:junit:$junitVersion"
+    def junitVersion= '4.13.2'
+    testImplementation "junit:junit:4.13.2"
     testImplementation libs.test.kotlin.junit
     // Mock objects
     def mockkVersion="1.13.4"
