--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-//apply from: 'versions.gradle'
+
 buildscript {
+
+    repositories {
+        google()
+        jcenter()
+
+    }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
+        classpath 'com.android.tools.build:gradle:4.1.1'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-plugins {
-   /* id 'com.android.application' version '7.1.3' apply false
-    id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false*/
-    alias(libs.plugins.kotlin.android).apply(false)
-    alias(libs.plugins.kotlin.jvm).apply(false)
-    alias(libs.plugins.android.application).apply(false)
-   // alias(libs.plugins.kotlin.kapt) apply false
-}
+allprojects {
+    repositories {
+        google()
+        jcenter()
 
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
