--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -59,20 +59,21 @@ dependencies {
     def appcompat_version = "1.6.1"
 
     def core_ktx_version = "1.1.1"
-    implementation "androidx.core:core-ktx:1.9.0"
-    implementation "androidx.appcompat:appcompat:1.6.1"
+  /*  implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"*/
     implementation "com.google.android.material:material:1.8.0"
 
     //viewModel
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     //Dagger/////////////////////
     def dagger_version = '2.45'
     implementation 'com.google.dagger:dagger:2.45'
     kapt 'com.google.dagger:dagger-compiler:2.45'
-    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
+  //  kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
+
     //test
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 
     def junitVersion= '4.13.2'
     testImplementation "junit:junit:4.13.2"
