--- a/core/build.gradle
+++ b/core/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.core:core-ktx:1.9.0'
+    //viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
