--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,16 +62,27 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    //Navigation/////////////////
-    def nav_version = "2.5.3"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    //DO NOT TOUCH - GOOGLE BUG HERE!!!
+    debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
+    androidTestImplementation("androidx.fragment:fragment-testing:1.6.0-alpha04")
 
+
+/*
+   def fragment_version = "1.5.0"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+*/
+    //Navigation/////////////////
+    /* def nav_version = "2.5.3"
+      implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+      implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+  */
     // JetPack
 
     //Dagger/////////////////////
     def dagger_version = '2.45'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-  //  kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
+    //  kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
+    //tmp
+    // debugImplementation "androidx.test:monitor:1.6.1"
 }
