--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
      * see Applying external plugins with same version to subprojects.
      */
 
-    id("com.android.application") version "7.4.1" apply false
-    id("com.android.library") version "7.4.1" apply false
+    id("com.android.application") version '7.4.2' apply false
+    id("com.android.library") version '7.4.2' apply false
     id("org.jetbrains.kotlin.android") version "1.8.10" apply false
     id "org.jetbrains.kotlin.kapt" version "1.8.20-Beta" apply false
 }
