--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ pluginManagement {
      */
 
     repositories {
+
         gradlePluginPortal()
         google()
         mavenCentral()
@@ -32,6 +33,7 @@ dependencyResolutionManagement {
 
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+      //  maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
     }
