--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        minSdk 19
+        minSdk 21//19
         targetSdk 33
         // multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -42,7 +42,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     //viewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.test:runner:1.5.2'
+    //testImplementation 'junit:junit:4.13.2'
+   // androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+   // androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Shit for mockk to run on api<p
+  //  implementation 'com.github.tmurakami:dexopener:2.0.5'
 }
