--- a/settings.gradle
+++ b/settings.gradle
@@ -33,7 +33,7 @@ dependencyResolutionManagement {
 
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-      //  maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }
         google()
         mavenCentral()
     }
