--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -102,9 +102,9 @@ dependencies {
     def coreTestingVersion = "1.1.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     //Espresso
-    /*  androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
+      androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
       androidTestImplementation('androidx.test:runner:1.5.2')
-      androidTestImplementation('androidx.test:rules:1.5.0')*/
+      androidTestImplementation('androidx.test:rules:1.5.0')
 
     /* def fragment_version = "1.5.6"
      debugImplementation "androidx.fragment:fragment-testing:$fragment_version"*/
