fragment test with fake viewModel coroutines passed 06.05.2023

--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -21,10 +21,10 @@ android {
         //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
-   /* packagingOptions {
-        exclude("META-INF/LICENSE.md")
+    /* packagingOptions {
+         exclude("META-INF/LICENSE.md")
 
-    }*/
+     }*/
     testOptions {
         animationsDisabled = true
     }
@@ -54,17 +54,17 @@ android {
 dependencies {
     implementation project(path: ':core')
     implementation project(path: ':coreUI')
-   // androidTestImplementation project(path: ':core')
+    // androidTestImplementation project(path: ':core')
 
     //androidTestImplementation 'androidx.multidex:multidex:2.0.1'
     // androidTestImplementation project(path: ':app')
 
-  //  implementation 'androidx.core:core-ktx:1.9.0'
+    //  implementation 'androidx.core:core-ktx:1.9.0'
     implementation "com.google.android.material:material:1.8.0"
 
     //viewModel
-      implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-      implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     //Dagger/////////////////////
     def dagger_version = '2.45'
     implementation 'com.google.dagger:dagger:2.45'
@@ -77,9 +77,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //DO NOT TOUCH - GOOGLE BUG HERE!!!
-   debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
+    debugImplementation("androidx.fragment:fragment-testing-manifest:1.6.0-alpha04")
     androidTestImplementation("androidx.fragment:fragment-testing:1.6.0-alpha04")
-   ///////////////////////////////////
+    ///////////////////////////////////
     //testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
     ///////////////////////////
     // Mock objects
@@ -88,27 +88,28 @@ dependencies {
     testImplementation "io.mockk:mockk:$mockkVersion"
     //shit here!!!!!
     //androidTestImplementation "io.mockk:mockk-android:$mockkVersion"
-   // testImplementation "io.mockk:mockk-android:${mockkVersion}"
-   // testImplementation "io.mockk:mockk-agent:${mockkVersion}"
+    // testImplementation "io.mockk:mockk-android:${mockkVersion}"
+    // testImplementation "io.mockk:mockk-agent:${mockkVersion}"
     //noinspection GradleDependency
     androidTestImplementation "io.mockk:mockk-android:${mockkVersion}"
-    //androidTestImplementation "io.mockk:mockk-agent:${mockkVersion}"
+   // androidTestImplementation "io.mockk:mockk-agent:${mockkVersion}"
     ////////////////////////
     //turbine
     testImplementation 'app.cash.turbine:turbine:0.12.1'
     // Run Blocking Test
     def coreTestingVersion = "1.1.1"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     //Espresso
-      androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
-      androidTestImplementation('androidx.test:runner:1.5.2')
-      androidTestImplementation('androidx.test:rules:1.5.0')
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1')
+    androidTestImplementation('androidx.test:runner:1.5.2')
+    androidTestImplementation('androidx.test:rules:1.5.0')
 
     /* def fragment_version = "1.5.6"
      debugImplementation "androidx.fragment:fragment-testing:$fragment_version"*/
 
     //tmp
-   // debugImplementation "androidx.test:monitor:1.6.1"
+    // debugImplementation "androidx.test:monitor:1.6.1"
 //Shit for mockk to run on api<p
     implementation 'com.github.tmurakami:dexopener:2.0.5'
 
