--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,5 +90,5 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     //  kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0" //ImportantSHIT!!!
     //tmp
-     debugImplementation "androidx.test:monitor:1.6.1"
+    // debugImplementation "androidx.test:monitor:1.6.1"
 }
