--- a/trackdialogFeature/build.gradle
+++ b/trackdialogFeature/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     //viewModel
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation 'androidx.test.espresso:espresso-contrib:3.5.1'
     //Dagger/////////////////////
     def dagger_version = '2.45'
     implementation 'com.google.dagger:dagger:2.45'
